# file-transfer-over-udp

./: .clang-format  .codecov.yml  .dependencies  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build.sh  vcpkg-configuration.json  vcpkg.json
benchmark/: CMakeLists.txt  benchmark.c  benchmark_results.csv  graphs.py
client/: CMakeLists.txt  main.c
client/src/: cmdline.c  cmdline.h  connector.c  connector.h  ftc.c  ftc.h  main.c  service_handler.c  service_handler.h  tftp_client.c  tftp_client.h  tftp_client_stats.c  tftp_client_stats.h
doc/: CMakeLists.txt  Doxyfile.in
docs/: CMakeLists.txt  Doxyfile.in  Model.mdj  documentazione.tex  rfc1350_req.txt  rfc2090_req.txt  rfc2347_req.txt  rfc2348_req.txt  rfc2349_req.txt  rfc7440_req.txt  rfcs-compliance-metadata.csv  rfcs-compliance-results.md  rfcs_compliance-test.py  style.tex  title.tex
docs/Dettagli/: Go-Back N.txt  Traccia.txt
docs/RFC/: README.md  rfc1350.txt  rfc2347.txt  rfc2348.txt  rfc2349.txt  rfc906.txt  rfcs-compliance-metadata.csv  rfcs-compliance-results.md
docs/chapters/: ambiente_sviluppo.tex  architettura.tex  esempi_funzionamento.tex  implementazione.tex  limitazioni.tex  manuale.tex  prestazioni.tex  traccia.tex
docs/chapters/architettura/: client.tex  perdita_pacchetti.tex  server.tex  tftp.tex  timeout.tex
docs/relazione/: benchmark.tex  header.tex  relazione.tex
examples/: CMakeLists.txt  cli.hpp  client.c  client_cli.cpp  client_cli.h  client_packet_loss.c  client_packet_loss.h  server.c  server_cli.cpp  server_cli.h  server_packet_loss.c  server_packet_loss.h
file-transfer-communication-protocol/test/: CMakeLists.txt  ftcp.c  ftcp.cpp
file-transfer-service/: CMakeLists.txt
file-transfer-service/include/: fts.h
file-transfer-service/src/: ftcp.h  fts.c
file-transfer-service/test/: CMakeLists.txt  ftcp.c
ft-client/: CMakeLists.txt
ft-client/src/: ftc.c  ftc.h  main.c
ft-server/: CMakeLists.txt
ft-server/src/: communication_manager.c  communication_manager.h  connection_listener.c  connection_listener.h  ft_handler.c  ft_handler.h  ft_service.c  ft_service.h  fts.c  fts.h  main.c  struct_ft_handler.h
ft-server/test/: CMakeLists.txt  ft_service.cpp  fts_test.c
gbn/: CMakeLists.txt
gbn/include/: tproto_service_gbn.h
gbn/include/tproto/: tproto_service_gbn.h
gbn/src/: gbn.h  gbn_packet.h  gbn_receiver.c  gbn_receiver.h  gbn_sender.c  gbn_sender.h  gbn_statemachine.c  gbn_statemachine.h  tproto_service_gbn.c
gbn/test/: CMakeLists.txt  tproto_gbn.cpp
gbnd/: CMakeLists.txt
gbnd/src/: gbnd.h  tproto_gbn.h  tproto_service_gbn.c
lib/: CMakeLists.txt
lib/concurrency/: CMakeLists.txt
lib/concurrency/rwfslock/: CMakeLists.txt
lib/concurrency/tpool/: CMakeLists.txt
lib/containers/: CMakeLists.txt
lib/containers/include/: list.h  map.h  queue.h  stack.h
lib/containers/src/: list.c  map.c  queue.c  stack.c
lib/containers/test/: CMakeLists.txt
lib/data-structure/: CMakeLists.txt
lib/data-structure/include/: queue.h
lib/data-structure/src/: queue.c  stack.c
lib/ftcp/: CMakeLists.txt
lib/ftcp/include/: ftcp.h
lib/ftcp/src/: ftcp.c
lib/include/: socket2.h  tpool.h
lib/include/data-structure/: stack.h
lib/iterators/: CMakeLists.txt
lib/iterators/include/: iterator.h
lib/iterators/src/: iterator.c
lib/networking/: CMakeLists.txt
lib/networking/communication_manager/: CMakeLists.txt
lib/networking/request_handler/: CMakeLists.txt
lib/networking/socket2/: CMakeLists.txt
lib/socket2/: CMakeLists.txt
lib/socket2/include/: nproto.h  nproto_ipv4.h  sockaddr2.h  socket2.h  socket2_provider.h  socket2_proxy.h  struct_socket2.h  tproto.h
lib/socket2/src/: nproto_ipv4.c  nproto_unix.c  sockaddr2.c  socket2.c  socket2_proxy.c
lib/socket2/test/: CMakeLists.txt  socket2.c
lib/src/socket2/: socket2.c
lib/src/tpool/: tpool.c
lib/statemachine/: CMakeLists.txt
lib/statemachine/include/: statemachine.h
lib/statemachine/src/: statemachine.c
lib/statemachine/test/: CMakeLists.txt  statemachine.cpp
lib/thread/: CMakeLists.txt
lib/thread/rwfslock/: CMakeLists.txt
lib/thread/tpool/: CMakeLists.txt
lib/tpool/: CMakeLists.txt
lib/tpool/src/: tpool.c
lib/try/: CMakeLists.txt
lib/try/include/: try.h
lib/utilities/: CMakeLists.txt
lib/utilities/argparser/: CMakeLists.txt
lib/utilities/include/: utilities.h
lib/utilities/misc/: CMakeLists.txt
lib/utilities/src/: utilities.c
lib/utilities/try/: CMakeLists.txt
logger/: CMakeLists.txt
logger/include/: logger.h
logger/src/: logger.c
logger/test/: CMakeLists.txt  test_logger.c
network_utils/: CMakeLists.txt
network_utils/include/: inet_utils.h
network_utils/src/: inet_utils.c
network_utils/test/: CMakeLists.txt  test_inet_utils.c
server/: CMakeLists.txt  fts.c  fts.h  main.c
server/src/: acceptor.c  acceptor.h  cmdline.c  cmdline.h  dispatcher.c  dispatcher.h  ft_service.c  fts.c  main.c  service_handler.c  service_handler.h  service_handler_factory.h  session_stats.c  session_stats.h  tftp_handler.c  tftp_handler.h  tftp_server.c  tftp_server.h  tftp_server_stats.c  tftp_server_stats.h  tftp_service.c  tftp_service.h  uring_job.h  uring_thread_pool.c  uring_thread_pool.h
server/test/: CMakeLists.txt  test.c  test_acceptor.c
tftp/: CMakeLists.txt
tftp/include/: tftp.h
tftp/src/: adaptive_timeout.c  adaptive_timeout.h  tftp.c
tftp/src/client/: client.c  connection.c  connection.h  stats.c  stats.h  tftp_client.c  tftp_client_connection.c  tftp_client_connection.h  tftp_client_stats.c
tftp/src/server/: adaptive_timeout.c  adaptive_timeout.h  dispatcher.c  dispatcher.h  listener.c  server.c  server_stats.c  session.c  session.h  session_connection.c  session_connection.h  session_file.c  session_file.h  session_handler.c  session_handler.h  session_options.c  session_options.h  session_stats.c  tftp_handler.c  tftp_server.c  tftp_server_listener.c  (+9 more)
tftp/test/: CMakeLists.txt  mock_logger.h  test.c  test_client.c  test_server.c  test_server_dispatcher.c  test_server_listener.c  test_utils_inet.c
(+139 files in other folders)
