find_package(Doxygen REQUIRED)

set(DOXYGEN_PROJECT_NAME ${CMAKE_PROJECT_NAME})
set(DOXYGEN_PROJECT_VERSION ${CMAKE_PROJECT_VERSION})
set(DOXYGEN_PROJECT_ROOT ${PROJECT_SOURCE_DIR})
set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/doxygen")

set(DOXYGEN_INPUT_FILE ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
set(DOXYGEN_OUTPUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
configure_file(${DOXYGEN_INPUT_FILE} ${DOXYGEN_OUTPUT_FILE} @ONLY)

add_custom_target(
        GenerateDocs ALL
        COMMENT "Generating API documentation with Doxygen"
        COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUTPUT_FILE}
        COMMAND echo "Docs written to: ${DOXYGEN_OUTPUT_DIRECTORY}"
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        VERBATIM
)
